--- a/System.Retry.Tests/packages.config
+++ b/System.Retry.Tests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FakeItEasy" version="2.2.0" targetFramework="net452" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="net452" />
   <package id="NUnit" version="3.0.0" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
+  <package id="System.InternetTime" version="1.0.0-CI00026" targetFramework="net452" />
 </packages>
